--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-* {
+body{
     margin: 0;
     padding: 0; 
-}
-body{
-    background-color: #abaeab;
+    background-color: #e1e1e1;
 }
 /* PRAROZ, 2021
 How To Create A Website using HTML & CSS | Step-by-Step Tutorial.
@@ -114,31 +112,31 @@ ul li a:hover {
     background-color: #fff;
     color: #6b2738;
 }
-.cont{
-    width: 1450px;
-    height: auto;
-    margin-left: 30px;
-    background-color: #f0eeee6d;
-    border-radius: 15%;
-    margin-top: 15px;
+.cont {
+    margin: 20px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 8px;
 }
 
 
 .content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    max-width: 1200px;
-    height: auto;
-    margin: 0 auto;
-    background-color: #f0eeee6d;
-    margin-top: 15px;
-}
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+        margin: 20px;
+        height: auto;
+        padding: 20px;
+        margin-top: 15px;
+        background-color: #fff;
+        border-radius: 8px;
+    }
 .image-content {
     max-width: 50%;
     display: flex;
     justify-content: flex-end;
+    padding-right: 10px;
 }
 
 .image-content img {
@@ -149,8 +147,9 @@ ul li a:hover {
 .text-content {
     max-width: 50%;
     text-align: left;
-    background-color: #f0eeee6d;
-    border-radius: 5%;
+    background-color: #fff;
+    border-radius: 8px; 
+    padding: 10px;
 }
 
 .text-content h2 {
@@ -164,7 +163,7 @@ ul li a:hover {
 .text-content p {
     font-family: Arial;
     letter-spacing: 1.2px;
-    line-height: 30px;
+    line-height: 1.5;
     font-size: 15px; 
     color: #000;
     margin-bottom: 20px; 
@@ -210,7 +209,7 @@ contented*/
     max-width: 1200px;
     margin: 0 auto;
     gap: 15px; 
-    background-color: #f0eeee6d;
+    background-color: #fff;
     margin-top: 15px;
 }
 
@@ -219,7 +218,7 @@ contented*/
     text-align: left;
     margin-left: 10px; 
     margin-bottom: 20px;
-    background-color: #f0eeee6d;
+    background-color: #fff;
 }
 
 .text-contented h2 {
@@ -233,7 +232,7 @@ contented*/
 .text-contented p {
     font-family: Arial;
     letter-spacing: 1.2px;
-    line-height: 30px;
+    line-height: 1.5;
     font-size: 15px; 
     color: #000;
     margin-bottom: 20px; 
@@ -254,10 +253,10 @@ contented*/
 .conteudodos {
     width: 600px;
     height: auto;
-    text-align: center;
+    text-align: left;
     margin-left: 450px;
     padding: 20px;
-    background-color: #f0eeee6d;
+    background-color: #fff;
 }
 .conteudodos h1 {
     margin-bottom: 20px;
@@ -273,6 +272,14 @@ contented*/
     font-size: 35px;
     letter-spacing: 2px;
     color: #353D2f;
+}
+.conteudodos p{
+    font-family: Arial;
+    letter-spacing: 1.2px;
+    line-height: 1.5;
+    font-size: 15px; 
+    color: #000;
+    margin-bottom: 20px; 
 }
 .image{
    margin-left: 62px;
@@ -383,7 +390,7 @@ table td {
   .conteudoCourses p {
     font-style: italic;
     letter-spacing: 1.2px;
-    line-height: 30px;
+    line-height: 1.5;
     font-size: 15px;
     color: #000;
     margin-bottom: 20px;
@@ -417,7 +424,7 @@ table td {
   .conteudoCoursestext p {
     font-family: Arial, sans-serif;
     letter-spacing: 1.2px;
-    line-height: 30px;
+    line-height: 1.5;
     font-size: 15px;
     color: #000;
     margin-bottom: 20px;
@@ -432,7 +439,7 @@ table td {
     width: 750px;
     height: 500px;
     border: 1px solid;
-    background-color: white;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
     padding: 40px;
