--- a/components.css
+++ b/components.css
@@ -41,7 +41,7 @@
 
 .text-content h2 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family:sans-serif;
     font-size: 35px;
     letter-spacing: 2px;
     color: #353D2f;
@@ -109,14 +109,14 @@ contented*/
 
 .text-contented h2 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 35px;
     letter-spacing: 2px;
     color: #353D2f;
 }
 
 .text-contented p {
-    font-family: Arial;
+    font-family: sans-serif;
     letter-spacing: 1.2px;
     line-height: 1.5;
     font-size: 15px; 
@@ -158,7 +158,7 @@ contented*/
 }
 .conteudodos h1 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 40px;
     letter-spacing: 2px;
     color: #353D2f;
@@ -166,13 +166,13 @@ contented*/
 
 .conteudodos h2 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 35px;
     letter-spacing: 2px;
     color: #353D2f;
 }
 .conteudodos p{
-    font-family: Arial;
+    font-family: sans-serif;
     letter-spacing: 1.2px;
     line-height: 1.5;
     font-size: 15px; 
@@ -188,7 +188,7 @@ contented*/
 .image h1{
     text-align: center;
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 40px;
     letter-spacing: 2px;
     color: #353D2f;
@@ -200,7 +200,7 @@ contented*/
 }
 .conteudo h1 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 40px;
     letter-spacing: 2px;
     color: #353D2f;
@@ -208,7 +208,7 @@ contented*/
 
 .conteudo h2 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 35px;
     letter-spacing: 2px;
     color: #353D2f;
@@ -217,7 +217,7 @@ h3{
     max-width: 50%;
     text-align: left;
     margin-bottom: 20px;
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
     color: #353D2f;
@@ -309,7 +309,7 @@ hover efect*/
   
   .conteudoCourses h2 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman', serif;
+    font-family: sans-serif;
     font-size: 35px;
     letter-spacing: 2px;
     color: #353d2f;
@@ -317,7 +317,7 @@ hover efect*/
   }
   
   .conteudoCourses p {
-    font-style: italic;
+    font-style: sans-serif;
     letter-spacing: 1.2px;
     line-height: 1.5;
     font-size: 15px;
@@ -370,7 +370,7 @@ hover efect*/
   
   .box1 h2 {
     margin-bottom: 20px;
-    font-family: 'Times New Roman', serif;
+    font-family: sans-serif;
     font-size: 35px;
     letter-spacing: 2px;
     color: #353d2f;
@@ -379,7 +379,7 @@ hover efect*/
   }
   
   .box1 p {
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     letter-spacing: 1.2px;
     line-height: 1.5;
     font-size: 15px;
@@ -398,7 +398,7 @@ margin-top: 150px;
 margin-bottom: 50px;
 }
 .table-style h2{
-    font-family: 'Times New Roman';
+    font-family: sans-serif;
     font-size: 30px;
     letter-spacing: 2px;
     color: #353D2f;
@@ -406,7 +406,7 @@ margin-bottom: 50px;
     margin-bottom: 5px;
 }
 .table-style p{
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     letter-spacing: 1.2px;
     line-height: 1.5;
     font-size: 15px;
