--- a/payment_footer.css
+++ b/payment_footer.css
@@ -150,7 +150,7 @@ Web CodePro
 }
 .form-log h2{
     margin-bottom: 20px;
-    font-family: 'Times New Roman', serif;
+    font-family: sans-serif;
     font-size: 35px;
     letter-spacing: 2px;
     color: #353d2f;
@@ -158,7 +158,7 @@ Web CodePro
 }
 .buttons{
     margin-bottom: 10px;
-    font-family: 'Times New Roman', serif;
+    font-family: sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
     color: #353d2f;
